<package format="2">
  <name>rviz_common</name>
  <version>4.0.2</version>
  <description>
    Common rviz API, used by rviz plugins and applications.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <author>Dave Hershberger</author>
  <author>David Gossow</author>
  <author>Josh Faust</author>

  <url type="website">https://github.com/ros2/rviz/blob/ros2/README.md</url>
  <url type="repository">https://github.com/ros2/rviz</url>
  <url type="bugtracker">https://github.com/ros2/rviz/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz_assimp_vendor</build_depend>

  <build_export_depend>qtbase5-dev</build_export_depend>
  <build_export_depend>rviz_assimp_vendor</build_export_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>resource_retriever</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_yaml_cpp_vendor</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tinyxml_vendor</depend>
  <depend>urdf</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
